--- a/Task-1-Data-Processing/data/notebooks/task1_data_preprocessing.ipynb
+++ b/Task-1-Data-Processing/data/notebooks/task1_data_preprocessing.ipynb
@@ -1183,6 +1183,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e7b8115",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "- Loaded and explored the dataset\n",
+    "- Handled missing values\n",
+    "- Performed feature-target separation\n",
+    "- Split data into training and testing sets\n",
+    "- Saved processed datasets for model training\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c943a986",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
